Pixel Fantasy Fix ScrollBar hidden will be top problem

--- a/PixelFantasy/css/index.css
+++ b/PixelFantasy/css/index.css
@@ -82,8 +82,15 @@ body {
     padding-top: 0px;
   }
 }
+/* Hide scrollbar for IE, Edge and Firefox */
 .containerScrollHidden {
-  overflow: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.containerScrollHidden::-webkit-scrollbar {
+  display: none;
 }
 
 .nav {
